--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -147,10 +147,12 @@
   </div>
 </div>
 
-  <%= simple_form_for [ @yacht, @review ] do |f| %>
-    <%= f.input :content %>
-    <%= f.input :rating %>
-    <%= f.submit "Submit Review", method: :post, class: "btn btn-primary" %>
+  <% if policy(@yacht).review? %>
+    <%= simple_form_for [ @yacht, @review ] do |f| %>
+      <%= f.input :content %>
+      <%= f.input :rating %>
+      <%= f.submit "Submit Review", method: :post, class: "btn btn-primary" %>
+  <% end %>
  <% end %>
 
 <ul class="list-group" style="padding-top: 10px">
