--- a/app/views/bookings/_booking_cards.html.erb
+++ b/app/views/bookings/_booking_cards.html.erb
@@ -7,8 +7,8 @@
   </div>
   <ul class="list-group list-group-flush">
     <li class="list-group-item">Total: <strong><%= number_with_delimiter(locals.price.round) %>€</strong></li>
-    <li class="list-group-item">From: <strong><%= locals.from.strftime("#{locals.from.day.ordinalize} of %B, %Y") %></strong></li>
-    <li class="list-group-item">To: <strong><%= locals.to.strftime("#{locals.to.day.ordinalize} of %B, %Y") %></strong></li>
+    <li class="list-group-item">From: <strong><%= locals.from.strftime("%d/%B/%Y") %></strong></li>
+    <li class="list-group-item">To: <strong><%= locals.to.strftime("%d/%B/%Y") %></strong></li>
     <% if action_name == 'user_bookings' %>
       <% if locals.payment_status == 'pending' %>
         <%= link_to "Complete payment", booking_checkout_path(locals), class: 'btn btn-danger w-75 my-3 mx-auto' %>
