--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,8 +5,8 @@
 @import "config/colors";
 @import "config/bootstrap_variables";
 
-@import 'mapbox-gl-geocoder/dist/mapbox-gl-geocoder.css';
-@import 'mapbox-gl/dist/mapbox-gl.css';
+@import "mapbox-gl-geocoder/dist/mapbox-gl-geocoder.css";
+@import "mapbox-gl/dist/mapbox-gl.css";
 
 // External libraries
 @import "bootstrap/scss/bootstrap";
