--- a/app/views/bookings/single_order.html.erb
+++ b/app/views/bookings/single_order.html.erb
@@ -5,7 +5,7 @@
         <h1 class="d-inline">
         Order #<%= @booking.id %>
         <small style="vertical-align: 5px">
-          <span class="badge badge-<%= @booking.payment_status == 'paid' ? 'success' : 'warning' %>"><%= @booking.payment_status %></span>
+          <span class="badge text-white badge-<%= @booking.payment_status == 'paid' ? 'success' : 'warning' %>"><%= @booking.payment_status %></span>
         </small>
         </h1>
       </div>
