--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -30,7 +30,7 @@
   <%= link_to yacht_user_path(current_user || 1), class: 'step-item' do %>
     <i class="fas fa-anchor iconDetails"></i>
 	  <div class="icon-steps">
-	    <h4>Ready? sail!</h4>
+	    <h4>Sail!</h4>
 	  </div>
   <% end %>
 
