--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,5 +28,6 @@
     <% if controller_name == 'pages' && action_name == 'home' %>
       <%= render 'layouts/footer' %>
     <% end %>
+     <%= render 'layouts/realfooter' %>
   </body>
 </html>
