--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -2,7 +2,7 @@
   indicators = ""
   divs = ""
 %>
-<h2 id="trend-title">Yachts on trend 🔥</h2>
+<h2 id="trend-title">🔥 Yachts on fire 🔥</h2>
 <div class="carousel-container">
   <% @yachts.last(5).each.with_index do |yacht, index| %>
     <% active = index == 0? "active" : ""
