--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -121,11 +121,11 @@
 
     <div>
       <div class="card user-info text-center p-3 w-75 m-auto">
-        <%= @user.navbar_avatar(size: 80) %>
+        <%= @user.navbar_avatar(size: 80) %> 
         <div class="card-body">
           <h5 class="font-weight-bold"><%= @user.first_name %></h5>
           <p class="card-text">
-            Joined <time class="timeago" datetime="<%= @user.created_at.iso8601 %>"></time>
+            Joined <time class="timeago" datetime="<%= @user.created_at.iso8601 %>"></time> --<!-- x Days ago--> 
           </p>
           <p class="card-text">
             <%= link_to 'See other yachts', yacht_user_path(@user), class: 'btn btn-outline-info' %>
@@ -167,22 +167,27 @@
   <% end %>
  <% end %>
 
-<ul class="list-group" style="padding-top: 10px">
-  <% @yacht.reviews.each do |review| %>
-     <li class="list-group-item">
-      <div class="row">
-        <div class="col-8">
-          <%= '<i class="fas fa-star"></i>'.html_safe * (review.rating || 0) %>
-          <p><%= review.content %></p>
-        </div>
-        <div class="col-4" id="be">
-          <%= "From:"%>
-          <p><%= review.user.full_name %></p>
-        </div>
+<% @yacht.reviews.each do |review| %> 
+  <div class="row mt-3 comments-container">
+    <div class="col-3 left-content-comments">
+      <div class="row avatar-comments pl-3 pt-3">
+        <p> <%= current_user.navbar_avatar %> <%= review.user.full_name %> </p>
       </div>
-    </li>
-  <% end %>
-</ul>
+      <div class="row rating-comments pl-3 pb-2">
+        <%= '<i class="fas fa-star"></i>'.html_safe * (review.rating || 0) %>
+      </div>
+    </div>
+    <div class="col-9 content-comments">
+      <p><%= review.content %></p>
+    </div>
+          <div class="row timeago-comments pl-3 pt-0">
+        <time class="timeago comment-date" datetime="<%= review.created_at.iso8601 %>"></time>
+      </div>  
+  </div>   
+<% end %>
+
+
+
 
 
 
