--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,6 +11,10 @@ nav.scrolled {
   padding: 4px 9px;
 }
 
+.footer-copyright span, .navbar-brand {
+  font-family: 'Chelsea Market', cursive;
+}
+
 body.pages-home {
   nav:not(.scrolled) {
     span {
