--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid pt-0 pb-4 d-flex align-items-center center-banner">
+<div class="jumbotron jumbotron-fluid pt-0 pb-4 d-flex align-items-center center-banner" style="background-image: url(<%= image_path 'home.jpg' %>)">
   <div class="container text-white d-none">
     <h1 class="display-4" id="title">Rent your next Yacht</h1>
     <p class="lead">You deserve a break, get a yacht! 🛥</p>
