--- a/app/views/layouts/_realfooter.html.erb
+++ b/app/views/layouts/_realfooter.html.erb
@@ -5,6 +5,6 @@
     <a href="#"><i class="fab fa-twitter"></i></a>
   </div>
   <div class="footer-copyright">
-    © <%= Date.today.year %> My Yachty
+    © <%= Date.today.year %> <span>My Yachty</span>
   </div>
 </div>
