--- a/app/assets/stylesheets/components/_yachtshow.scss
+++ b/app/assets/stylesheets/components/_yachtshow.scss
@@ -62,28 +62,20 @@
 }
 
 .comments-container {
-  border: 1px solid #e67f22;
   border-radius: 8px;
   padding: 5px;
 }
 
 .content-comments {
   margin-top: 2px;
-  border-radius: 8px;
-  background-color: rgba(255, 228, 196, 0.582);
-  width: 300vh;
-  padding: 9px;
-  font-size: 10px;
+  border-radius: 10px;
+  background-color: #f3f3f3;
+  padding: 1em 2em;
   font-weight: lighter;
 
-    > p {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: normal;
-  }
 }
 
 .comment-date {
-  font-size: 9px;
   font-style: italic;
 }
 .left-content-comments {
@@ -95,4 +87,47 @@
 }
 .mapboxgl-popup-content ul {
   margin-bottom: 0
+}
+
+.avatar-comments {
+  flex-direction: column;
+}
+.left-content-comments > div {
+  align-items: center;
+  justify-content: center;
+}
+
+.box {
+  background-color: #f3f3f3;
+  width: 100%;
+  border-radius: 5px;
+  padding: 20px;
+  list-style: none;
+}
+.carousel-item img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
+.user-info .avatar {
+  width: 80px;
+  margin: auto;
+}
+
+#be {
+  text-align: right;
+}
+
+#be p {
+  font-weight: bolder;
+}
+
+.bes {
+  padding-top: 10px;
+}
+
+
+.fa-star {
+  color: #eeac14;
 }
