--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -48,7 +48,7 @@
       <h4>Services</h4>
       <ul class="box">
         <% @yacht.service_types.each do |service| %>
-          <li><%= service.name %></li>
+          <li class="<%= service.name.downcase.gsub("\s", '_') %>"><%= service.name %></li>
         <% end %>
       </ul>
     </div>
@@ -59,7 +59,7 @@
       <h4>Equipments</h4>
       <ul class="box">
         <% @yacht.equipment_types.each do |equipment| %>
-          <li><%= equipment.name %></li>
+          <li class="<%= equipment.name.downcase.gsub("\s", '_') %>"><%= equipment.name %></li>
         <% end %>
       </ul>
     </div>
@@ -121,11 +121,11 @@
 
     <div>
       <div class="card user-info text-center p-3 w-75 m-auto">
-        <%= @user.navbar_avatar(size: 80) %> 
+        <%= @user.navbar_avatar(size: 80) %>
         <div class="card-body">
           <h5 class="font-weight-bold"><%= @user.first_name %></h5>
           <p class="card-text">
-            Joined <time class="timeago" datetime="<%= @user.created_at.iso8601 %>"></time> --<!-- x Days ago--> 
+            Joined <time class="timeago" datetime="<%= @user.created_at.iso8601 %>"></time>
           </p>
           <p class="card-text">
             <%= link_to 'See other yachts', yacht_user_path(@user), class: 'btn btn-outline-info' %>
@@ -159,6 +159,10 @@
   </div>
 </div>
 
+<h4 class="mt-3 text-center">
+    Reviews
+</h4>
+
   <% if policy(@yacht).review? %>
     <%= simple_form_for [ @yacht, @review ] do |f| %>
       <%= f.input :content %>
@@ -167,69 +171,21 @@
   <% end %>
  <% end %>
 
-<% @yacht.reviews.each do |review| %> 
-  <div class="row mt-3 comments-container">
-    <div class="col-3 left-content-comments">
+<% @yacht.reviews.each do |review| %>
+  <div class="row mt-3 comments-container mx-3">
+    <div class="col-2 left-content-comments">
       <div class="row avatar-comments pl-3 pt-3">
-        <p> <%= current_user.navbar_avatar %> <%= review.user.full_name %> </p>
+        <%= current_user.navbar_avatar %> <p><%= review.user.full_name %> </p>
       </div>
       <div class="row rating-comments pl-3 pb-2">
         <%= '<i class="fas fa-star"></i>'.html_safe * (review.rating || 0) %>
       </div>
     </div>
-    <div class="col-9 content-comments">
+    <div class="col-10 content-comments">
       <p><%= review.content %></p>
     </div>
-          <div class="row timeago-comments pl-3 pt-0">
-        <time class="timeago comment-date" datetime="<%= review.created_at.iso8601 %>"></time>
-      </div>  
-  </div>   
+  </div>
 <% end %>
-
-
-
-
-
-
-
-<style>
-.box {
-  background-color: #f3f3f3;
-  width: 100%;
-  border-radius: 5px;
-  padding: 20px;
-  list-style: none;
-}
-.carousel-item img {
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-}
-
-.user-info .avatar {
-  width: 80px;
-  margin: auto;
-}
-
-#be {
-  text-align: right;
-}
-
-#be p {
-  font-weight: bolder;
-}
-
-.bes {
-  padding-top: 10px;
-}
-
-
-.fa-star {
-  color: yellow;
-}
-
-</style>
-
 
 
 
