--- a/app/assets/stylesheets/pages/_new_yacht.scss
+++ b/app/assets/stylesheets/pages/_new_yacht.scss
@@ -54,3 +54,9 @@ body:not(.bookings-single_order) .card-yacht {
     margin: auto;
   }
 }
+
+.card-title {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
