resposive for mobile

--- a/app/views/bookings/user_bookings.html.erb
+++ b/app/views/bookings/user_bookings.html.erb
@@ -31,3 +31,14 @@
     </div>
   </div>
 </div>
+
+<style type="text/css">
+  @media screen and (max-width: 600px) {
+   .step-item {
+      margin: 5px;
+   }
+   .step-item > #besi {
+    margin: 0px, 15px;
+   }
+}
+</style>
