--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -2,7 +2,7 @@
   indicators = ""
   divs = ""
 %>
-<h2 id="trend-title">Yachts on trend 🔥</h2>
+<h2 id="trend-title"> Trending Yachts 🔥</h2>
 <div class="carousel-container">
   <% @yachts.first(3).each.with_index do |yacht, index| %>
     <% active = index == 0? "active" : ""
@@ -40,3 +40,11 @@
   </a>
 </div>
 </div>
+
+<style type="text/css">
+  @media screen and (max-width: 600px) {
+    .carousel-container {
+      width: 100%;
+    }
+}
+</style>
