--- a/app/views/layouts/_hotplaces.html.erb
+++ b/app/views/layouts/_hotplaces.html.erb
@@ -10,6 +10,18 @@
           </div>
         </div>
       </div>
-    <% end %> 
+    <% end %>
   </div>
 </div>
+
+
+<style type="text/css">
+  @media screen and (max-width: 600px) {
+    .jumbotron-fluid {
+      margin-top: 80px;
+    }
+    .btn-info {
+      width: 200px;
+    }
+}
+</style>
