--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -74,3 +74,16 @@
 <% else %>
   <%= render 'devise/sessions/modal' %>
 <% end %>
+
+<style type="text/css">
+  @media screen and (max-width: 600px) {
+  .navbar-brand {
+    margin-left: 100px;
+    margin-bottom: 20px;
+    width: 100%;
+  }
+  #search-div {
+    width: 100%;
+  }
+}
+</style>
